[package]
name = "glad-prep"
version = "0.1.0"
edition = "2024"

[dependencies]

# CLI
clap = { version = "4", features = ["derive"] }

# VCF / bgzf / tabix
noodles = { version = "0.109", features = ["core", "vcf", "bgzf", "tabix"] }

# Linear algebra (dosage matrix + PCA projection)
ndarray = "0.16"

# GMM fitting
linfa = "0.8"
linfa-clustering = "0.8"

# Serialization / output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression (gzip for .glad.gz output and weights file input)
flate2 = "1"

# TSV reading (weights file + user metadata)
csv = "1"

# Error handling
anyhow = "1"

# Progress bars
indicatif = "0.18"
